fix: select text align start

--- a/src/ui/general/select/style.scss
+++ b/src/ui/general/select/style.scss
@@ -105,6 +105,7 @@
 
 .select_value {
   flex: 1 1 auto;
+  text-align: start;
   min-width: 0;
   overflow: hidden;
   text-overflow: ellipsis;
